# CG-from-scratch-rs

./: Cargo.toml  README.md
examples/: hello_pixels.rs
examples/raytracer/: basic_raytracing.rs  camera_position.rs  diffuse_reflection.rs  reflections.rs  shadows.rs  specular_reflection.rs
src/: canvas.rs  export.rs  lib.rs  primitive.rs  raytracer.rs  winit_app.rs
