[package]
name    = "computer-graphics-from-scratch-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = "1.0.93"
bytemuck   = "1.19.0"
env_logger = "0.11.5"
pixels     = "0.14.0"
winit      = { version = "0.30.5", features = ["rwh_05"] }

[[example]]
name = "hello_pixels"
path = "examples/hello_pixels.rs"
