[package]
name    = "computer-graphics-from-scratch-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
cgmath = "0.18.0"
png    = "0.17.14"

[[example]]
name = "raytracer_01_basic_raytracing"
path = "examples/raytracer/basic_raytracing.rs"

[[example]]
name = "raytracer_02_diffuse_reflection"
path = "examples/raytracer/diffuse_reflection.rs"

[[example]]
name = "raytracer_03_specular_reflection"
path = "examples/raytracer/specular_reflection.rs"

[[example]]
name = "raytracer_04_shadows"
path = "examples/raytracer/shadows.rs"

[[example]]
name = "raytracer_05_reflections"
path = "examples/raytracer/reflections.rs"

[[example]]
name = "raytracer_06_camera_position"
path = "examples/raytracer/camera_position.rs"
